Added support for hudson test runs to build scripts