@@ -3,9 +3,14 @@
 	<property name="src.dir"   value="${basedir}/src" />
 	<property name="build.dir" value="${basedir}/bin" />
 	<property name="dist.dir"  value="${basedir}/../deployment" />
+	<property name="test.reports"   value="${basedir}/testresults/" />
 
-	<target name="runTests" depends="compile">
-		<junit printsummary="yes" haltonfailure="yes" haltonerror="yes" showoutput="yes">
+	<target name="runTestsXML" depends="compile">
+	  	<mkdir dir="${test.reports}" />
+		<junit printsummary="withOutAndErr" haltonfailure="yes"
+		       fork="yes" forkMode="once" haltonerror="yes"
+		       enableTestListenerEvents="false"
+		       showoutput="yes" dir="${basedir}">
 			<jvmarg value="-Xmx2048m"/>
 			<jvmarg value="-XX:MaxPermSize=256m"/>
 			<jvmarg value="-ea"/>
@@ -17,6 +22,28 @@
 				<pathelement location="${basedir}/../key.util.test/lib/hamcrest-core-1.3.jar"/>
 				<pathelement path="${build.dir}"/>
 			</classpath>
+			<formatter type="xml"/>
+			<test name="TestKey" todir="${test.reports}" />
+		</junit>
+	</target>
+
+	<target name="runTests" depends="compile">
+		<junit printsummary="withOutAndErr" haltonfailure="yes"
+		       fork="yes" forkMode="once" haltonerror="yes"
+		       enableTestListenerEvents="false"
+		       showoutput="yes" dir="${basedir}">
+			<jvmarg value="-Xmx2048m"/>
+			<jvmarg value="-XX:MaxPermSize=256m"/>
+			<jvmarg value="-ea"/>
+			<classpath>
+				<pathelement location="${dist.dir}/key.core.jar"/>
+				<pathelement path="${basedir}/../key.util.test/bin"/>
+				<pathelement location="${dist.dir}/key.util.jar"/>
+				<pathelement location="${basedir}/../key.util.test/lib/junit-4.12.jar"/>
+				<pathelement location="${basedir}/../key.util.test/lib/hamcrest-core-1.3.jar"/>
+				<pathelement path="${build.dir}"/>
+			</classpath>
+			<formatter type="brief" usefile="false" />
 			<test name="TestKey" />
 		</junit>
 	</target>
@@ -44,7 +71,8 @@
 
 	<target name="clean" description="Deletes all generated files and folders.">
 		<delete failonerror="false" includeemptydirs="true"> 
-			<fileset dir="${build.dir}" includes="**/*" />
+		  <fileset dir="${build.dir}" includes="**/*" />
+   		  <fileset dir="${test.reports}" includes="**/*" />
 		</delete>
 	</target>
 </project>
