@@ -4,10 +4,13 @@
 	<property name="build.dir" value="${basedir}/bin" />
 	<property name="dist.dir"  value="${basedir}/../deployment" />
 	<property name="ext.dir" value="${basedir}/lib" />
+	<property name="test.reports"   value="${basedir}/testresults/" />
 
-	<target name="runTests" depends="compile">
-		<junit printsummary="yes" haltonfailure="yes" haltonerror="yes" showoutput="yes" dir="${basedir}">
-			<jvmarg value="-Xmx2048m"/>
+
+	<target name="runTestsXML" depends="compile">
+  	  <mkdir dir="${test.reports}" />
+	  <junit printsummary="withOutAndErr" haltonfailure="yes" fork="yes" forkMode="once" haltonerror="yes" enableTestListenerEvents="false" showoutput="yes" dir="${basedir}">
+	                <jvmarg value="-Xmx2048m"/>
 			<jvmarg value="-XX:MaxPermSize=256m"/>
 			<jvmarg value="-ea"/>
 			<classpath>
@@ -16,10 +19,29 @@
 				<pathelement location="${ext.dir}/hamcrest-core-1.3.jar"/>
 				<pathelement path="${build.dir}"/>
 			</classpath>
-			<test name="org.key_project.util.suite.AllUtilsTests" />
-		</junit>
+			<formatter type="xml"/>
+			<test name="org.key_project.util.suite.AllUtilsTests" todir="${test.reports}"/>
+	  </junit>
 	</target>
 
+
+	<target name="runTests" depends="compile">
+	  <junit printsummary="withOutAndErr" haltonfailure="yes" fork="yes" forkMode="once" haltonerror="yes" enableTestListenerEvents="false" showoutput="yes" dir="${basedir}">
+	                <jvmarg value="-Xmx2048m"/>
+			<jvmarg value="-XX:MaxPermSize=256m"/>
+			<jvmarg value="-ea"/>
+			<classpath>
+				<pathelement location="${dist.dir}/key.util.jar"/>
+				<pathelement location="${ext.dir}/junit-4.12.jar"/>
+				<pathelement location="${ext.dir}/hamcrest-core-1.3.jar"/>
+				<pathelement path="${build.dir}"/>
+			</classpath>
+			<formatter type="brief" usefile="false" />
+			<test name="org.key_project.util.suite.AllUtilsTests"/>
+	  </junit>
+	</target>
+
+	
 	<target name="compile" description="Compile all source files into the build directory.">
 		<mkdir dir="${build.dir}"/>
 		<javac srcdir= "${src.dir}" 
@@ -41,7 +63,8 @@
 
 	<target name="clean" description="Deletes all generated files and folders.">
 		<delete failonerror="false" includeemptydirs="true"> 
-			<fileset dir="${build.dir}" includes="**/*" />
+		  <fileset dir="${build.dir}" includes="**/*" />
+   		  <fileset dir="${test.reports}" includes="**/*" />
 		</delete>
 	</target>
 </project>
